--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,7 @@
   ],
   "rules": {
     "vue/multi-word-component-names": "off",
-    "@typescript-eslint/no-explicit-any": ["off"]
-
+    "@typescript-eslint/no-explicit-any": "off",
+    "vue/attributes-order": "off"
   }
 }
