--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@vitejs/plugin-vue-jsx": "^3.0.2",
     "@vueuse/core": "^10.4.1",
     "axios": "^1.5.0",
+    "crypto-js": "^4.2.0",
     "element-plus": "^2.8.7",
     "lodash-es": "^4.17.21",
     "pinia": "^2.1.6",
+    "pinia-plugin-persistedstate": "^4.1.3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
