--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,9 @@
   "rules": {
     "vue/multi-word-component-names": "off",
     "@typescript-eslint/no-explicit-any": "off",
-    "vue/attributes-order": "off"
+    "vue/attributes-order": "off",
+    "vue/attribute-hyphenation": "off",
+    "vue/no-v-html": "off",
+    "vue/require-default-prop": "off"
   }
 }
