--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
     "@vueuse/core": "^10.4.1",
     "axios": "^1.5.0",
     "crypto-js": "^4.2.0",
+    "echarts": "^5.5.1",
     "element-plus": "^2.8.7",
     "lodash-es": "^4.17.21",
+    "marked": "^15.0.1",
+    "mitt": "^3.0.1",
     "pinia": "^2.1.6",
     "pinia-plugin-persistedstate": "^4.1.3",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "watermark-lite": "^0.1.1"
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.9",
