--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --open",
-    "build": "vue-tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview",
     "eslint": "eslint src --ext .js,.vue,.ts,.jsx,.tsx --ignore-path .gitignore ",
     "prettier": "prettier --write \"./**/*.{html,vue,ts,js,json,md}\"",
@@ -24,8 +24,7 @@
     "pinia": "^2.1.6",
     "pinia-plugin-persistedstate": "^4.1.3",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4",
-    "watermark-lite": "^0.1.1"
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.9",
